Local Jquery, and some updated frontend pages

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,35 +1,30 @@
-<div class="container">
-  <hgroup>
     <img src="/icons/bee.svg" id="sweetIndexLogo" alt="sweet logo"/>
-    <h2 class="mb-2">welcome to sweet</h2>
-    <h5 class="mb-4">(currently home to {{userCount}} little donuts).</h5>
+<div class="container">
+  <hgroup style="height: 120px; margin-bottom: 1rem;">
+    <h1 class="mb-2" style="font-size: 3.5rem;"><strong>welcome to sweet</strong></h1>
+    <h4 class="mb-4" style="font-size: 2.5rem;">(currently home to {{userCount}} utopians).</h4>
   </hgroup>
 
-  <p>
-    sweet is an experimental, lightweight social network, currently in alpha. it is intentionally designed to be less toxic, more radical, and more supportive than other social networks.
-  </p>
-
-  <h5><i class="fas fa-eye-slash"></i> sweet is built on privacy.</h5>
-  <p>
-    sweet does not and will never have ads, and we will never share your data with anyone or sell it to anyone. promise. if it becomes too expensive to run the site, we will shut down rather than treat our users as products.
+  <p class="mb-4" style="font-size:1.8rem;">
+    sweet is a <strong>utopian social network</strong>, an experiment in creating a better online world for folk who are made to feel unsafe online - all are welcome, but we especially seek to create a safer space for queer and trans people, women, disabled people, and people of colour. only by coming together we can work for the abolition of patriarchy and capitalism.
   </p>
 
   <h5><i class="fas fa-lock"></i> sweet is built on trust.</h5>
   <p>
-    on sweet, you can <strong>trust</strong> users alongside following them. users you trust see your private posts, and in return you will be notified of users they have <strong>flagged</strong> as unsafe in our communities.
+    on sweet, you can <strong class="text-success">trust</strong> users alongside following them. users you trust see your private posts, and in return you will see which users they have anonymously <strong class="text-danger">flagged</strong> as unsafe.
+  </p>
+
+  <h5><i class="fas fa-eye-slash"></i> sweet is built on privacy.</h5>
+  <p>
+    sweet will never have ads, never track its users, and never willingly share data with external organisations and services.
   </p>
 
   <h5><i class="fas fa-leaf"></i> sweet is built around communities.</h5>
   <p>
-    in sweet communities, there are no administrators or moderators. all members share responsibility for managing the community, and decisions like changes to the community rules or banning users are put to a majority vote before they can be enacted. communities can be made private and invite-only. sweet communities are unique and experimental.
-  </p>
-
-  <h5><i class="fas fa-bug"></i> sweet is quite buggy!</h5>
-  <p>
-    you are very welcome to use sweet, but please be aware that while we're in alpha, there will be plenty of bugs and things will behave strangely. it will be a huge help if you let me know about these, either on my <a href="/lowercasename">sweet profile</a>, my <a href="http://twitter.com/lowercasename">twitter</a>, or the <a href="https://github.com/lowercasename/sweet">sweet github repository</a>. we do our best to safeguard your data, but while we're in alpha, please do not post anything on sweet you're not willing to suddenly lose!
+    in sweet communities, there are no administrators or moderators. all members share responsibility for managing the community, and decisions like changes to the community rules or banning users are put to a majority vote before they can be enacted. communities can be made private and invite-only.
   </p>
 
   <p>
-    have fun. x
+    <strong>have fun and be kind. x</strong>
   </p>
 </div>
