--- a/public/css/style.css
+++ b/public/css/style.css
@@ -430,13 +430,14 @@ hr {
 }
 
 #sweetIndexLogo {
-  display: inline;
-  float: left;
-  width: 65px;
-  height: 65px;
-  position: relative;
-  top: 7px;
-  margin-right: 1rem;
+    width: 600px;
+    height: 600px;
+    opacity: 0.1;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -300px;
+    margin-left: -300px;
 }
 
 #navbarProfileImage {
