--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -64,6 +64,8 @@
             <a class="dropdown-item" href="/settings"><i class="fas fa-fw fa-cog"></i> settings</a>
             <!-- <a id="darkModeToggle" class="dropdown-item" href="#"><i class="fas fa-fw fa-moon"></i> dark mode</a> -->
             <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/support"><i class="fas fa-fw fa-question-circle"></i> support</a>
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/logout"><i class="fas fa-fw fa-sign-out-alt"></i> log out</a>
           </div>
         </li>
