dumb push notif bugfixes

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -303,7 +303,7 @@
 
     } else {
         console.warn('Push messaging is not supported');
-        pushButton.html('Push Not Supported');
+        pushButton.css('display','none');
     }
 
     //call this whenever the subscription state changes
