--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -277,6 +277,6 @@ $(function() {
             cleanPastedHTML: true
         }
     }
-    editor = new MediumEditor('.editable-text', options);
+    editor = new MediumEditor('.editable-text,#communityDescription,#communityRules', options);
 });
 </script>
