--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -155,6 +155,7 @@ $(function() {
         $.post("/admin/reporterror", {errorstring: errorstring});
     }
 
+{{#if loggedIn}}
     // TRIBUTE-RELATED FUNCTIONALITY (@-MENTIONS)
     // Init tribute
     $.post('/api/user/followers', function (data) {
@@ -168,12 +169,16 @@ $(function() {
         tribute.attach($(".editable-text")); //attach to new post form and comment fields if there are any that aren't handled when their posts are appended (look a few lines down for that)
     });
 
+{{/if}}
+
     // Attach scripts to newly loaded posts
     $('#postsContainer').on('append.infiniteScroll', function (event, response, path, items) {
+        {{#if loggedIn}}
         editor.addElements('.editable-text');
         if (typeof tribute !== 'undefined') { // Silently fails to load tribute if API has not yet responded, it will be attached to these comment fields when tribute does load (look up a few lines)
             tribute.attach($(".editable-comment-content"));
         }
+        {{/if}}
         var newlyLoadedStuff = $(items);
         if (newlyLoadedStuff.find('.post-images').length > 0) {
             var imagesLoaded = newlyLoadedStuff.find('.post-single-image').length;
