--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -223,6 +223,7 @@ $(function() {
         }
     });
 
+    {{#if loggedIn}}
     // From https://stackoverflow.com/a/4819886, will undoubtedly break sooner or later
     function is_touch_device() {
         var prefixes = ' -webkit- -moz- -o- -ms- '.split(' ');
@@ -283,5 +284,6 @@ $(function() {
         }
     }
     editor = new MediumEditor('.editable-text,#communityDescription,#communityRules', options);
+    {{/if}}
 });
 </script>
