more client-side error logging upgrades hopefully

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
 
   <script defer src="/fonts/fontawesome/js/all.min.js"></script>
 
-  <script src="/js/jquery-3.3.1.min.js"></script>
+  <script src="/js/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="/js/infinite-scroll.pkgd.min.js" crossorigin="anonymous"></script>
@@ -45,7 +45,7 @@
   <link rel="stylesheet" href="/css/tribute.css" />
   <script src="/js/tribute.min.js" crossorigin="anonymous"></script>
 
-  <script src="/js/handlebars-v4.1.2.min.js"></script>
+  <script src="/js/handlebars-v4.1.2.min.js" crossorigin="anonymous"></script>
 
   <script src="/js/medium-editor.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@latest/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
