--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1096,9 +1096,16 @@ hr {
   border-radius: 4px;
 }
 
+@media (max-width: 500px){
+  .post-single-image,
+  .post-single-image > img {
+    max-height: 450px;
+  }
+}
+
 .post-images.one-image {
   background-image: linear-gradient(45deg, #fff5f9 25%, #ffffff 25%, #ffffff 50%, #fff5f9 50%, #fff5f9 75%, #ffffff 75%, #ffffff 100%);
-background-size: 5.66px 5.66px;
+  background-size: 5.66px 5.66px;
   grid-template-columns: 100%;
   grid-template-rows: 100%;
 }
@@ -1125,15 +1132,18 @@ background-size: 5.66px 5.66px;
   grid-row-end: span 2;
 }
 
-@media (max-width: 500px){
-  .post-single-image,
-  .post-single-image > img {
-    max-height: 175px;
-  }
+@media(max-width: 500px){
   .post-images{
     max-height:175px;
   }
+  .post-images.one-image {
+    max-height:450px;
+  }
+  .post-single-image > img {
+    max-height: 450px;
+  }
 }
+
 .comment .content .post-images {
     max-width: 400px;
     max-height: 200px;
