--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1077,8 +1077,12 @@ hr {
   display: grid;
   grid-column-gap: 2px;
   grid-row-gap: 2px;
-  max-height: 400px;
+  max-height: 450px;
   margin-bottom: 10px;
+}
+
+.post-images.vertical-image {
+  max-height: 550px;
 }
 
 .post-images a {
@@ -1091,9 +1095,14 @@ hr {
   cursor: pointer;
   width: 100%;
   height: 100%;
-  max-height: 400px;
+  max-height: 450px;
   transition: border 100ms ease-in;
   border-radius: 4px;
+}
+
+.post-single-image.vertical-image,
+.post-single-image.vertical-image > img {
+  max-height:550px;
 }
 
 @media (max-width: 500px){
@@ -1145,7 +1154,7 @@ hr {
 }
 
 .comment .content .post-images {
-    max-width: 400px;
+    max-width: 450px;
     max-height: 200px;
 }
 
