probably fine now?

--- a/views/partials/previewedVideoEmbed.handlebars
+++ b/views/partials/previewedVideoEmbed.handlebars
@@ -1,6 +1,6 @@
-<a class="link-preview-container youtube-preview" target="_blank" rel="noopener noreferrer" embedurl="{{embedurl}}" href="{{linkurl}}">
+<a class="link-preview-container embedded-video-preview" target="_blank" rel="noopener noreferrer" embedurl="{{embedurl}}" href="{{linkurl}}">
     <div style="display:flex;justify-content:center;position:relative;">
-    <img class="link-preview-image youtube-preview-image" src="{{image}}" />
+    <img class="link-preview-image embedded-video-preview-image" src="{{image}}" />
     <img src="/images/fa-playbutton-red.svg" style="position:absolute;height:100%;">
     </div>
         <div class="link-preview-text-container">
