--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -397,8 +397,7 @@ $(function() {
       }
     })
   })
-  $('body').on('click','.youtube-preview', function(e){
-    console.log('adsf');
+  $('body').on('click','.embedded-video-preview', function(e){
     e.preventDefault()
     var embedurl = $(this).attr('embedurl');
     $(this).replaceWith('<div class="embedded-video-cont"><iframe class="embedded-video" src="'+embedurl+'" frameborder="0" allowfullscreen></iframe></div>')
