fix small welcome message editor bug now that it's rich text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1313,6 +1313,10 @@ hr {
   font-size: 90%;
 }
 
+.medium-editor-element {
+  height: auto;
+}
+
 .link-preview-container {
     display: flex;
     height: 100px;
