fix home splash page on mobile

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
     <img src="/icons/bee.svg" id="sweetIndexLogo" alt="sweet logo"/>
 <div class="container">
-  <hgroup style="height: 120px; margin-bottom: 1rem;">
+  <hgroup style="min-height: 120px; margin-bottom: 1rem;">
     <h1 class="mb-2" style="font-size: 3.5rem;"><strong>welcome to sweet</strong></h1>
     <h4 class="mb-4" style="font-size: 2.5rem;">(currently home to {{userCount}} utopians).</h4>
   </hgroup>
